--- a/sectiontemplate.pug
+++ b/sectiontemplate.pug
@@ -66,9 +66,9 @@ each section, index in sections
 									span=task.title
 									ul
 										each subtask in task.subtasks
-											li=subtask
+											li!=subtask
 							else
-								li=task
+								li!=task
 
 	p
 	hr
